Fixed image to alignment for phones

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -62,9 +62,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 0;
   }
   
   #dp img {
     width: 50%;  
   }
+
+  
 }
